Locking/hiding sidebar

--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
-  <style></style>
+  <style>
+    .sidebar-project {
+      height: 32px;
+    }
+
+    .header {
+      height: 64px;
+    }
+  </style>
 </html>
