--- a/chart/index.html
+++ b/chart/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>san-studio</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/EmbeddableChartWidget/main.ts"></script>
-  </body>
-  <style>
-    .sidebar-project {
-      height: 32px;
-    }
-  </style>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>san-studio</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/EmbeddableChartWidget/main.ts"></script>
+</body>
+<style>
+  .sidebar-project {
+    height: 32px;
+  }
+
+  body,
+  body>.column {
+    min-height: 100vh;
+  }
+</style>
+
 </html>
